Drop-down menu functionality fix on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2302,6 +2302,18 @@ section,
     max-width: 100%;
     height: auto;
   }
+
+  .dropdown-submenu > .dropdown-menu {
+    position: static;
+    width: 100%;
+    margin-top: 0;
+    border: none;
+    box-shadow: none;
+}
+
+.dropdown-submenu > a:after {
+    transform: rotate(90deg);
+}
 }
 
 /*--------------------------------------------------------------
